Fixed readability issue with buttons

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,6 +26,7 @@ button {
 
 :visited {
     color: white;
+    background-color: black;
 }
 
 #image {
